--- a/client/src/fragments/CustomerDb/index.css
+++ b/client/src/fragments/CustomerDb/index.css
@@ -2,6 +2,8 @@
   table-layout: fixed;
   width: 80%;
   white-space: nowrap;
+  margin: auto;
+  border-collapse: collapse;
 }
 
 .db-table td {
@@ -10,24 +12,44 @@
   text-overflow: ellipsis;
   padding: 15px;
   color: black;
+  border: 2px solid black;
+  font-size: 1.5rem;
 }
 
 .db-table thead {
-  font-size: 1.5rem !important;
+  font-weight: 500;
 }
 
 .db-id {
   width: 25%;
+  position: relative;
+  overflow: visible;
+}
+
+.db-id > p {
+  overflow: hidden;
+}
+
+.db-id > span {
+  display: none;
+  position: absolute;
+  z-index: 4;
+  background-color: var(--blue5);
+  color: var(--blue2);
+}
+
+.db-id:focus > span {
+  display: block;
 }
 
 .db-cus-name {
-  width: 30%;
+  width: 25%;
 }
 
 .db-ph {
-  width: 20%;
+  width: 25%;
 }
 
 .db-due {
-  width: 20%;
+  width: 25%;
 }
