--- a/client/src/fragments/billing/index.css
+++ b/client/src/fragments/billing/index.css
@@ -7,6 +7,7 @@
   align-items: center;
   overflow-x: auto;
   overflow-y: auto;
+  margin: auto;
 }
 
 .main p {
